Add Medicare Dashboard project with Next.js, Cloudflare Workers, and Turso integration
- Created a modern fullstack web application structure.
- Added environment configuration with `.env.example`.
- Implemented database connection using Drizzle ORM with Turso.
- Set up Cloudflare Workers for API handling.
- Developed core pages: Dashboard, Patients, Claims, and Not Found.
- Integrated responsive UI components with Tailwind CSS.
- Established theme toggling functionality.
- Included mock data for testing and development.
- Configured database migrations and seeding scripts.
- Updated README with project details and setup instructions.

--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,10 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# env files
+.env
+.env.*
+!.env.example
 
 # vercel
 .vercel
@@ -39,3 +41,16 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Local SQLite database
+*.db
+*.sqlite
+*.sqlite3
+
+# Cloudflare
+.wrangler/
+.dev.vars
+
+# IDEs
+.idea/
+.vscode/
