--- a/package.json
+++ b/package.json
@@ -17,12 +17,20 @@
     "@cloudflare/workers-types": "^4.20250413.0",
     "@libsql/client": "^0.15.3",
     "@neondatabase/serverless": "^1.0.0",
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-select": "^2.1.7",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "drizzle-kit": "^0.30.6",
     "drizzle-orm": "^0.41.0",
     "hono": "^4.7.6",
+    "lucide-react": "^0.488.0",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.2.0",
+    "tw-animate-css": "^1.2.5",
+    "uuid": "^11.1.0",
     "wrangler": "^4.10.0",
     "zod": "^3.24.2"
   },
@@ -32,6 +40,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "concurrently": "^9.1.2",
     "dotenv": "^16.5.0",
     "eslint": "^9",
