--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "dev:all": "concurrently \"npm run dev\" \"npm run worker:dev\""
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.787.0",
     "@cloudflare/workers-types": "^4.20250413.0",
     "@libsql/client": "^0.15.3",
-    "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-select": "^2.1.7",
     "@tiptap/extension-bold": "^2.11.7",
@@ -42,6 +42,7 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-image-crop": "^11.0.10",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "uuid": "^11.1.0",
